VXIPNP/WinNT/include/age1960.h


#define age1960_PFER_RMS_PHASE_LIMIT_MIN		0.0			/* PFER CIFT rms phase error limit minimum */
#define age1960_PFER_RMS_PHASE_LIMIT_MAX		5.0			/* PFER CIFT rms phase error limit maximum */

#define age1960_PFER_FREQ_ERROR_LIMIT_MIN		0.01		/* PFER CIFT frequency error limit minimum */
#define age1960_PFER_FREQ_ERROR_LIMIT_MAX		0.10		/* PFER CIFT frequency error limit minimum */

#define age1960_GPRS_FORMAT					"GPRS"			/* GPRS TA format name */
#define age1960_GSM_FORMAT					"GSM"			/* GSM TA format name */
#define age1960_AMPS_IS136_FORMAT			"AMPS\IS136"	/* AMPS/IS136 TA format name */
#define age1960_WCDMA_FORMAT				"WCDMA"     	/* WCDMA TA format name */

#define age1960_GPRS_TA_SUFFIX				":GPRS"     	/* SCPI suffix for GPRS TAP SCPI */
#define age1960_GSM_TA_SUFFIX				":GSM"      	/* SCPI suffix for GSM TAP SCPI */
#define age1960_IS136_TA_SUFFIX				":DIG136"   	/* SCPI suffix for AMPS/IS136 TAP (Digital Control Channel Only) */
#define age1960_AMPS_IS136_TA_SUFFIX		":TA136"    	/* SCPI suffix for AMPS/IS136 TAP SCPI */
#define age1960_WCDMA_TA_SUFFIX				":WCDMA"    	/* SCPI suffix for WCDMA TAP SCPI */
#define age1960_C2K_TA_SUFFIX				":C2K"			/* SCPI suffix for C2K SCPI */

#define age1960_PVT_MASK_NARROW					0			/* Power Vs Time PCS ETSI Limit Mask - Narrow */
#define age1960_PVT_MASK_RELAXED				1			/* Power Vs Time PCS ETSI Limit Mask - Relaxed */

#define age1960_ORFS_LIMIT_ETSI					0			/* ORFS measurement Limit Source ETSI setting */
#define age1960_ORFS_LIMIT_MAN					1			/* ORFS measurement Limit Source Manual setting */

#define age1960_ORFSSW_LIM_POINTS_MIN			1			/* ORFS Switching Limits minimum number of points */
#define age1960_ORFSSW_LIM_POINTS_MAX			8			/* ORFS Switching Limits maximum number of points */

#define age1960_ORFSMOD_LIM_POINTS_MIN			1			/* ORFS Modulation Limits minimum number of points */
#define age1960_ORFSMOD_LIM_POINTS_MAX			22			/* ORFS Modulation Limits maximum number of points */

#define age1960_ORFSSW_LIMIT_MIN		      -200.0		/* ORFS Switching Limits minimum acceptable setting */
#define age1960_ORFSSW_LIMIT_MAX			   100.0		/* ORFS Switching Limits maximum acceptable setting */

#define age1960_ORFSMOD_LIMIT_MIN			  -200.0		/* ORFS Modulation Limits minimum acceptable setting */
#define age1960_ORFSMOD_LIMIT_MAX			   100.0		/* ORFS Modulation Limits maximum acceptable setting */



    /***************************************************/
    /*  Instrument specific functions                  */
    /***************************************************/

    ViStatus _VI_FUNC age1960_cmdIntArr
    (ViSession  instrumentHandle,
     ViString   sendIntegerArrayCommand,
     ViInt32    sendIntegerArraySize,
     ViInt32    sendIntegerArray[]);


    ViStatus _VI_FUNC age1960_cmdRealArr
    (ViSession  instrumentHandle,
     ViString   sendRealArrayCommand,
     ViInt32    sendRealArraySize,
     ViReal64   sendRealArray[]);


    ViStatus _VI_FUNC age1960_partialPreset
    (ViSession  instrumentHandle);


    ViStatus _VI_FUNC age1960_readTXPower_Q
    (ViSession  instrumentHandle,
     ViBoolean  autoRange,
     ViPInt32   TXPowerIntegrity,
     ViPReal64  TXPower);


    ViStatus _VI_FUNC age1960_readPowerVsTime_Q
    (ViSession  instrumentHandle,
     ViInt32    pvsTimeArraySize,
     ViPInt32   pvsTimeIntegrity,
     ViPReal64  pvsTimeMaskFail,
     ViPReal64  pvsTimeTXPower,
     ViReal64   _VI_FAR pvsTimeArray[],
     ViPInt32   pvsTimeCount);


    ViStatus _VI_FUNC age1960_readIQTuning_Q
    (ViSession  instrumentHandle,
     ViInt32    IQArraySize,
     ViPInt32   IQIntegrity,
     ViPReal64  IQSpurFreq,
     ViPReal64  IQSpurLevel,
     ViReal64   _VI_FAR IQResultsArray[],
     ViReal64   _VI_FAR IQFreqsArray[],
     ViPInt32   IQTuningCount);


    ViStatus _VI_FUNC age1960_readPFER_Q
    (ViSession instrumentHandle,
     ViPInt32   PFERIntegrity,
     ViPReal64  PFERRMSError,
     ViPReal64  PFERPeakError,
     ViPReal64  PFERFreqError);


    ViStatus _VI_FUNC age1960_readORFS_Q
    (ViSession  instrumentHandle,
     ViInt32    ORFSSwArraySize,
     ViInt32    ORFSModArraySize,
     ViPInt32   ORFSIntegrity,
     ViPReal64  ORFSTXPower,
     ViPReal64  ORFSBWPower,
     ViReal64   _VI_FAR ORFSSwArray[],
     ViReal64   _VI_FAR ORFSModArray[],
     ViPInt32   ORFSSwCount,
     ViPInt32   ORFSModCount);


    ViStatus _VI_FUNC age1960_readFBER_Q
    (ViSession  instrumentHandle,
     ViPInt32   FBERIntegrity,
     ViPReal64  FBERBitsTested,
     ViPReal64  FBERRatio,
     ViPReal64  FBERCount);


    ViStatus _VI_FUNC age1960_readBER_Q
    (ViSession  instrumentHandle,
     ViPInt32   BERIntegrity,
     ViPReal64  TypeIaBERBitsTested,
     ViPReal64  TypeIaBERRatio,
     ViPReal64  TypeIaBERCount,
     ViPReal64  TypeIbBERBitsTested,
     ViPReal64  TypeIbBERRatio,
     ViPReal64  TypeIbBERCount,
     ViPReal64  TypeIIBERBitsTested,
     ViPReal64  TypeIIBERRatio,
     ViPReal64  TypeIIBERCount);


    ViStatus _VI_FUNC age1960_readAAudio_Q
    (ViSession  instrumentHandle,
     ViPInt32   AAudioIntegrity,
     ViPReal64  AAudioResult);


    ViStatus _VI_FUNC age1960_readDAudio_Q
    (ViSession  instrumentHandle,
     ViPInt32   DAudioIntegrity,
     ViPReal64  DAudioResult);


    ViStatus _VI_FUNC age1960_readDynPower_Q
    (ViSession  instrumentHandle,
     ViInt32    dynPowerArraySize,
     ViInt32    _VI_FAR dynPowerIntegrity[],
     ViReal64   _VI_FAR dynPowerArray[],
     ViPInt32   dynPowerCount);


    ViStatus _VI_FUNC age1960_initMeasFcn
    (ViSession  instrumentHandle,
     ViInt16    measFcn);


    ViStatus _VI_FUNC age1960_initMeasFcns
    (ViSession  instrumentHandle,
     ViInt32    measFcnsToInit,
     ViInt16    _VI_FAR measFcnsArray[]);


    ViStatus _VI_FUNC age1960_fetchTXPower_Q
    (ViSession instrumentHandle,
     ViPInt32   TXPowerIntegrity,
     ViPReal64  TXPower);


    ViStatus _VI_FUNC age1960_fetchPowerVsTime_Q
    (ViSession instrumentHandle,
     ViInt32    pvsTimeArraySize,
     ViPInt32   pvsTimeIntegrity,
     ViPReal64  pvsTimeMaskFail,
     ViPReal64  pvsTimeTXPower,
     ViReal64   _VI_FAR pvsTimeArray[],
     ViPInt32   pvsTimeCount);


    ViStatus _VI_FUNC age1960_fetchDynPower_Q
    (ViSession  instrumentHandle,
     ViInt32    dynPowerArraySize,
     ViInt32    _VI_FAR dynPowerIntegrity[],
     ViReal64   _VI_FAR dynPowerArray[],
     ViPInt32   dynPowerCount);


    ViStatus _VI_FUNC age1960_fetchIQTuning_Q
    (ViSession  instrumentHandle,
     ViInt32    IQArraySize,
     ViPInt32   IQIntegrity,
     ViPReal64   IQSpurFreq,
     ViPReal64   IQSpurLevel,
     ViReal64   _VI_FAR IQResultsArray[],
     ViReal64   _VI_FAR IQFreqsArray[],
     ViPInt32   IQTuningCount);


    ViStatus _VI_FUNC age1960_fetchPFER_Q
    (ViSession instrumentHandle,
     ViPInt32   PFERIntegrity,
     ViPReal64  PFERRMSError,
     ViPReal64  PFERPeakError,
     ViPReal64  PFERFreqError);


    ViStatus _VI_FUNC age1960_fetchORFS_Q
    (ViSession  instrumentHandle,
     ViInt32    ORFSSwArraySize,
     ViInt32    ORFSModArraySize,
     ViPInt32   ORFSIntegrity,
     ViPReal64  ORFSTXPower,
     ViPReal64  ORFSBWPower,
     ViReal64   _VI_FAR ORFSSwArray[],
     ViReal64   _VI_FAR ORFSModArray[],
     ViPInt32   ORFSSwCount,
     ViPInt32   ORFSModCount);


    ViStatus _VI_FUNC age1960_fetchFBER_Q
    (ViSession  instrumentHandle,
     ViPInt32   FBERIntegrity,
     ViPReal64  FBERBitsTested,
     ViPReal64  FBERRatio,
     ViPReal64  FBERCount);


    ViStatus _VI_FUNC age1960_fetchBER_Q
    (ViSession  instrumentHandle,
     ViPInt32   BERIntegrity,
     ViPReal64  TypeIaBERBitsTested,
     ViPReal64  TypeIaBERRatio,
     ViPReal64  TypeIaBERCount,
     ViPReal64  TypeIbBERBitsTested,
     ViPReal64  TypeIbBERRatio,
     ViPReal64  TypeIbBERCount,
     ViPReal64  TypeIIBERBitsTested,
     ViPReal64  TypeIIBERRatio,
     ViPReal64  TypeIIBERCount);


    ViStatus _VI_FUNC age1960_fetchAAudio_Q
    (ViSession  instrumentHandle,
     ViPInt32   AAudioIntegrity,
     ViPReal64  AAudioResult);


    ViStatus _VI_FUNC age1960_fetchDAudio_Q
    (ViSession  instrumentHandle,
     ViPInt32   DAudioIntegrity,
     ViPReal64  DAudioResult);


    ViStatus _VI_FUNC age1960_waitForInitDone_Q
    (ViSession  instrumentHandle,
     ViReal64   initDoneTimeOut,
     ViPInt16   measFcnDone);


    ViStatus _VI_FUNC age1960_originateCall
    (ViSession  instrumentHandle,
     ViInt16    completion,
     ViReal64   originateTimeOut);


    ViStatus _VI_FUNC age1960_endCall
    (ViSession  instrumentHandle,
     ViBoolean  endSeq);


    ViStatus _VI_FUNC age1960_TCHARFCN
    (ViSession  instrumentHandle,
     ViInt32	TCHARFCN,
     ViInt16	TCHARFCNBand,
     ViBoolean  TCHARFCNSeq);


    ViStatus _VI_FUNC age1960_manualChan
    (ViSession  instrumentHandle,
     ViInt32    manualChan,
     ViInt16    manualChanBand);


    ViStatus _VI_FUNC age1960_expectedPower
    (ViSession  instrumentHandle,
     ViReal64   expectedPower,
     ViInt16    expectedPowerBand);


    ViStatus _VI_FUNC age1960_confRcvControl
    (ViSession  instrumentHandle,
     ViInt16    rcvControlMode);


    ViStatus _VI_FUNC age1960_MSTXLevel
    (ViSession  instrumentHandle,
     ViInt32    MSTXLevel,
     ViInt16    MSTXLevelBand,
     ViBoolean  MSTXLevelSeq);


    ViStatus _VI_FUNC age1960_TCHTimeslot
    (ViSession  instrumentHandle,
     ViInt32    TCHTimeslot,
     ViBoolean  TCHTimeslotSeq);


    ViStatus _VI_FUNC age1960_MSTimeAdvance
    (ViSession  instrumentHandle,
     ViInt32    MSTimingAdvance,
     ViBoolean  MSTimingAdvanceSeq);


    ViStatus _VI_FUNC age1960_BCHARFCN
    (ViSession  instrumentHandle,
     ViInt16    BCHARFCNCell,
     ViInt32    BCHARFCN,
     ViInt16    BCHARFCNBand,
     ViBoolean  BCHARFCNSeq);