VXIPNP/WinNT/include/age1960.bas


Global Const age1960_PFER_RMS_PHASE_LIMIT_MIN = 0#      ' PFER CIFT rms phase error limit minimum
Global Const age1960_PFER_RMS_PHASE_LIMIT_MAX = 5#      ' PFER CIFT rms phase error limit maximum

Global Const age1960_PFER_FREQ_ERROR_LIMIT_MIN = 0.01   ' PFER CIFT frequency error limit minimum
Global Const age1960_PFER_FREQ_ERROR_LIMIT_MAX = 0.1    ' PFER CIFT frequency error limit minimum

Global Const age1960_GPRS_FORMAT = "GPRS"               ' GPRS TA format name
Global Const age1960_GSM_FORMAT = "GSM"                 ' GSM TA format name
Global Const age1960_AMPS_IS136_FORMAT = "AMPS\IS136"   ' AMPS/IS136 TA format name
Global Const age1960_WCDMA_FORMAT = "WCDMA"             ' WCDMA TA format name

Global Const age1960_GPRS_TA_SUFFIX = ":GPRS"           ' SCPI suffix for GPRS TAP SCPI
Global Const age1960_GSM_TA_SUFFIX = ":GSM"             ' SCPI suffix for GSM TAP SCPI
Global Const age1960_IS136_TA_SUFFIX = ":DIG136"        ' SCPI suffix for AMPS/IS136 TAP (Digital Control Channel Only)
Global Const age1960_AMPS_IS136_TA_SUFFIX = ":TA136"    ' SCPI suffix for AMPS/IS136 TAP SCPI
Global Const age1960_WCDMA_TA_SUFFIX = ":WCDMA"         ' SCPI suffix for WCDMA TAP SCPI
Global Const age1960_C2K_TA_SUFFIX = ":C2K"             ' SCPI suffix for C2K SCPI

Global Const age1960_PVT_MASK_NARROW = 0                ' Power Vs Time PCS ETSI Limit Mask - Narrow
Global Const age1960_PVT_MASK_RELAXED = 1               ' Power Vs Time PCS ETSI Limit Mask - Relaxed

Global Const age1960_ORFS_LIMIT_ETSI = 0                ' ORFS measurement Limit Source ETSI setting
Global Const age1960_ORFS_LIMIT_MAN = 1                 ' ORFS measurement Limit Source Manual setting
 
Global Const age1960_ORFSSW_LIM_POINTS_MIN = 1          ' ORFS Switching Limits minimum number of points
Global Const age1960_ORFSSW_LIM_POINTS_MAX = 8          ' ORFS Switching Limits maximum number of points

Global Const age1960_ORFSMOD_LIM_POINTS_MIN = 1         ' ORFS Modulation Limits minimum number of points
Global Const age1960_ORFSMOD_LIM_POINTS_MAX = 22        ' ORFS Modulation Limits maximum number of points

Global Const age1960_ORFSSW_LIMIT_MIN = -200#           ' ORFS Switching Limits minimum acceptable setting
Global Const age1960_ORFSSW_LIMIT_MAX = 100#            ' ORFS Switching Limits maximum acceptable setting

Global Const age1960_ORFSMOD_LIMIT_MIN = -200#          ' ORFS Modulation Limits minimum acceptable setting
Global Const age1960_ORFSMOD_LIMIT_MAX = 100#           ' ORFS Modulation Limits maximum acceptable setting

'        ***************************************************
'        *  Instrument specific functions                  *
'        ***************************************************

'* End of instrument specific declarations *
'*---------------------------------------------------------------------------*

Declare Function age1960_cmdIntArr Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal sendIntegerArrayCommand As String, _
    ByVal sendIntegerArraySize As Long, _
    ByRef sendIntegerArray As Long) As Long

Declare Function age1960_cmdRealArr Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal sendRealArrayCommand As String, _
    ByVal sendRealArraySize As Long, _
    ByRef sendRealArray As Double) As Long

Declare Function age1960_partialPreset Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long) As Long

Declare Function age1960_readTXPower_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal autoRange As Integer, _
    ByRef TXPowerIntegrity As Long, _
    ByRef TXPower As Double) As Long

Declare Function age1960_readPowerVsTime_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal pvsTimeArraySize As Long, _
    ByRef pvsTimeIntegrity As Long, _
    ByRef pvsTimeMaskFail As Double, _
    ByRef pvsTimeTXPower As Double, _
    ByRef pvsTimeArray As Double, _
    ByRef pvsTimeCount As Long) As Long

Declare Function age1960_readIQTuning_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal IQArraySize As Long, _
    ByRef IQIntegrity As Long, _
    ByRef IQSpurFreq As Double, _
    ByRef IQSpurLevel As Double, _
    ByRef IQResultsArray As Double, _
    ByRef IQFreqsArray As Double, _
    ByRef IQTuningCount As Long) As Long

Declare Function age1960_readPFER_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByRef PFERIntegrity As Long, _
    ByRef PFERRMSError As Double, _
    ByRef PFERPeakError As Double, _
    ByRef PFERFreqError As Double) As Long

Declare Function age1960_readORFS_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal ORFSSwArraySize As Long, _
    ByVal ORFSModArraySize As Long, _
    ByRef ORFSIntegrity As Long, _
    ByRef ORFSTXPower As Double, _
    ByRef ORFSBWPower As Double, _
    ByRef ORFSSwArray As Double, _
    ByRef ORFSModArray As Double, _
    ByRef ORFSSwCount As Long, _
    ByRef ORFSModCount As Long) As Long
           
Declare Function age1960_readFBER_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByRef FBERIntegrity As Long, _
    ByRef FBERBitsTested As Double, _
    ByRef FBERRatio As Double, _
    ByRef FBERCount As Double) As Long

Declare Function age1960_readBER_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByRef BERIntegrity As Long, _
    ByRef TypeIaBERBitsTested As Double, _
    ByRef TypeIaBERRatio As Double, _
    ByRef TypeIaBERCount As Double, _
    ByRef TypeIbBERBitsTested As Double, _
    ByRef TypeIbBERRatio As Double, _
    ByRef TypeIbBERCount As Double, _
    ByRef TypeIIBERBitsTested As Double, _
    ByRef TypeIIBERRatio As Double, _
    ByRef TypeIIBERCount As Double) As Long

Declare Function age1960_readAAudio_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByRef AAudioIntegrity As Long, _
    ByRef AAudioResult As Double) As Long

Declare Function age1960_readDAudio_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByRef DAudioIntegrity As Long, _
    ByRef DAudioResult As Double) As Long

Declare Function age1960_readDynPower_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal dynPowerArraySize As Long, _
    ByRef dynPowerIntegrity As Long, _
    ByRef dynPowerArray As Double, _
    ByRef dynPowerCount As Long) As Long

Declare Function age1960_initMeasFcn Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal measFcn As Integer) As Long

Declare Function age1960_initMeasFcns Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal measFcnsToInit As Long, _
    ByRef measFcnsArray As Integer) As Long

Declare Function age1960_fetchTXPower_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByRef TXPowerIntegrity As Long, _
    ByRef TXPower As Double) As Long

Declare Function age1960_fetchPowerVsTime_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal pvsTimeArraySize As Long, _
    ByRef pvsTimeIntegrity As Long, _
    ByRef pvsTimeMaskFail As Double, _
    ByRef pvsTimeTXPower As Double, _
    ByRef pvsTimeArray As Double, _
    ByRef pvsTimeCount As Long) As Long

Declare Function age1960_fetchDynPower_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal dynPowerArraySize As Long, _
    ByRef dynPowerIntegrity As Long, _
    ByRef dynPowerArray As Double, _
    ByRef dynPowerCount As Long) As Long

Declare Function age1960_fetchIQTuning_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal IQArraySize As Long, _
    ByRef IQIntegrity As Long, _
    ByRef IQSpurFreq As Double, _
    ByRef IQSpurLevel As Double, _
    ByRef IQResultsArray As Double, _
    ByRef IQFreqsArray As Double, _
    ByRef IQTuningCount As Long) As Long

Declare Function age1960_fetchPFER_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByRef PFERIntegrity As Long, _
    ByRef PFERRMSError As Double, _
    ByRef PFERPeakError As Double, _
    ByRef PFERFreqError As Double) As Long

Declare Function age1960_fetchORFS_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal ORFSSwArraySize As Long, _
    ByVal ORFSModArraySize As Long, _
    ByRef ORFSIntegrity As Long, _
    ByRef ORFSTXPower As Double, _
    ByRef ORFSBWPower As Double, _
    ByRef ORFSSwArray As Double, _
    ByRef ORFSModArray As Double, _
    ByRef ORFSSwCount As Long, _
    ByRef ORFSModCount As Long) As Long
           
Declare Function age1960_fetchFBER_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByRef FBERIntegrity As Long, _
    ByRef FBERBitsTested As Double, _
    ByRef FBERRatio As Double, _
    ByRef FBERCount As Double) As Long

Declare Function age1960_fetchBER_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByRef BERIntegrity As Long, _
    ByRef TypeIaBERBitsTested As Double, _
    ByRef TypeIaBERRatio As Double, _
    ByRef TypeIaBERCount As Double, _
    ByRef TypeIbBERBitsTested As Double, _
    ByRef TypeIbBERRatio As Double, _
    ByRef TypeIbBERCount As Double, _
    ByRef TypeIIBERBitsTested As Double, _
    ByRef TypeIIBERRatio As Double, _
    ByRef TypeIIBERCount As Double) As Long
         
Declare Function age1960_fetchAAudio_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByRef AAudioIntegrity As Long, _
    ByRef AAudioResult As Double) As Long

Declare Function age1960_fetchDAudio_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByRef DAudioIntegrity As Long, _
    ByRef DAudioResult As Double) As Long

Declare Function age1960_waitForInitDone_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal InitDoneTimeOut As Double, _
    ByRef MeasFcnDone As Integer) As Long

Declare Function age1960_originateCall Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal completion As Integer, _
    ByVal originateTimeOut As Double) As Long

Declare Function age1960_endCall Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal endSeq As Integer) As Long

Declare Function age1960_TCHARFCN Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal TCHARFCN As Long, _
    ByVal TCHARFCNBand As Integer, _
    ByVal TCHARFCNSeq As Integer) As Long

Declare Function age1960_manualChan Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal manualChan As Long, _
    ByVal manualChanBand As Integer) As Long

Declare Function age1960_expectedPower Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal expectedPower As Double, _
    ByVal expectedPowerBand As Integer) As Long

Declare Function age1960_confRcvControl Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal rcvControlMode As Integer) As Long

Declare Function age1960_MSTXLevel Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal MSTXLevel As Long, _
    ByVal MSTXLevelBand As Integer, _
    ByVal MSTXLevelSeq As Integer) As Long

Declare Function age1960_TCHTimeslot Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal TCHTimeslot As Long, _
    ByVal TCHTimeslotSeq As Integer) As Long

Declare Function age1960_MSTimeAdvance Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal MSTimingAdvance As Long, _
    ByVal MSTimingAdvanceSeq As Integer) As Long

Declare Function age1960_BCHARFCN Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
    ByVal BCHARFCNCell As Integer, _
    ByVal BCHARFCN As Long, _
    ByVal BCHARFCNBand As Integer, _
    ByVal BCHARFCNSeq As Integer) As Long
